@@ -26,15 +26,16 @@ connection::connection(boost::asio::io_service& io_service,
   : connection_manager_(manager),
     request_handler_(handler),
 	timeout_(timeout),
-	timer_(io_service, boost::posix_time::seconds( timeout ))
+	timer_(io_service, boost::posix_time::seconds( timeout )),
+	default_abandoned_timeout_(20*60), // 20mn before stopping abandoned connection
+	abandoned_timer_(io_service, boost::posix_time::seconds(default_abandoned_timeout_))
 {
 	secure_ = false;
 	keepalive_ = false;
 #ifdef WWW_ENABLE_SSL
 	sslsocket_ = NULL;
 #endif
-	socket_ = new boost::asio::ip::tcp::socket(io_service),
-	m_lastresponse=mytime(NULL);
+	socket_ = new boost::asio::ip::tcp::socket(io_service);
 }
 
 #ifdef WWW_ENABLE_SSL
@@ -44,13 +45,14 @@ connection::connection(boost::asio::io_service& io_service,
   : connection_manager_(manager),
     request_handler_(handler),
 	timeout_(timeout),
-	timer_(io_service, boost::posix_time::seconds( timeout ))
+	timer_(io_service, boost::posix_time::seconds( timeout )),
+	default_abandoned_timeout_(20*60), // 20mn before stopping abandoned connection
+	abandoned_timer_(io_service, boost::posix_time::seconds(default_abandoned_timeout_))
 {
 	secure_ = true;
 	keepalive_ = false;
 	socket_ = NULL;
 	sslsocket_ = new ssl_socket(io_service, context);
-	m_lastresponse=mytime(NULL);
 }
 #endif
 
@@ -60,8 +62,7 @@ ssl_socket::lowest_layer_type& connection::socket()
 {
   if (secure_) {
 	return sslsocket_->lowest_layer();
-  }
-  else {
+  } else {
 	return socket_->lowest_layer();
   }
 }
@@ -85,6 +86,7 @@ void connection::start()
 		return;
 	}
 
+	set_abandoned_timeout();
 	host_endpoint_ = endpoint.address().to_string();
 	if (secure_) {
 #ifdef WWW_ENABLE_SSL
@@ -98,11 +100,14 @@ void connection::start()
 		// start reading data
 		read_more();
 	}
-	m_lastresponse=mytime(NULL);
 }
 
 void connection::stop()
 {
+	// Cancel timers
+	cancel_abandoned_timeout();
+	timer_.cancel();
+
 	// Initiate graceful connection closure.
 	boost::system::error_code ignored_ec;
 	socket().shutdown(boost::asio::ip::tcp::socket::shutdown_both, ignored_ec); // @note For portable behaviour with respect to graceful closure of a
@@ -169,7 +174,6 @@ void connection::handle_read(const boost::system::error_code& error, std::size_t
     {
 		// ensure written bytes in the buffer
 		_buf.commit(bytes_transferred);
-		m_lastresponse=mytime(NULL);
 		boost::tribool result;
 		/// The incoming request.
 		request request_;
@@ -240,17 +244,12 @@ void connection::handle_read(const boost::system::error_code& error, std::size_t
 
 void connection::handle_write(const boost::system::error_code& error)
 {
-	if (!error) {
-		if (keepalive_) {
-			// if a keep-alive connection is requested, we read the next request
-			read_more();
-		} else {
-			connection_manager_.stop(shared_from_this());
-		}
+	if (!error && keepalive_) {
+		// if a keep-alive connection is requested, we read the next request
+		read_more();
 	} else {
 		connection_manager_.stop(shared_from_this());
 	}
-	m_lastresponse=mytime(NULL);
 }
 
 connection::~connection()
@@ -260,6 +259,31 @@ connection::~connection()
 #ifdef WWW_ENABLE_SSL
 	if (sslsocket_) delete sslsocket_;
 #endif
+}
+
+/// schedule abandoned timeout timer
+void connection::set_abandoned_timeout() {
+	abandoned_timer_.expires_from_now(boost::posix_time::seconds(default_abandoned_timeout_));
+	abandoned_timer_.async_wait(boost::bind(&connection::handle_abandoned_timeout, shared_from_this(), boost::asio::placeholders::error));
+}
+
+/// simply cancel abandoned timeout timer
+void connection::cancel_abandoned_timeout() {
+	abandoned_timer_.cancel();
+}
+
+/// reschedule abandoned timeout timer
+void connection::reset_abandoned_timeout() {
+	cancel_abandoned_timeout();
+	set_abandoned_timeout();
+}
+
+/// stop connection on abandoned timeout
+void connection::handle_abandoned_timeout(const boost::system::error_code& error) {
+	if (error != boost::asio::error::operation_aborted) {
+		_log.Log(LOG_ERROR, "%s -> connection abandoned", host_endpoint_.c_str());
+		connection_manager_.stop(shared_from_this());
+	}
 }
 
 } // namespace server
